# ffmpeg-cpp

./: CMakeLists.txt
include/ffmpegcpp/: CodecDeducer.h  FFmpegException.h
include/ffmpegcpp/Codecs/: VideoCodec.h
include/ffmpegcpp/FrameSinks/: AudioEncoder.h  VideoEncoder.h
include/ffmpegcpp/Sources/: Demuxer.h  RawVideoDataSource.h
src/: FFmpegException.cpp
src/Codecs/: VideoCodec.cpp
src/Sources/: RawVideoDataSource.cpp
